@@ -1,8 +1,8 @@
 Name:                plot
-Version:             0.2.1
+Version:             0.2.2
 License:             BSD3
 License-file:        LICENSE
-Copyright:           (c) A.V.H. McPhail 2010, 2012, 2013
+Copyright:           (c) A.V.H. McPhail 2010, 2012, 2013, 2014
 Author:              Vivian McPhail
 Maintainer:          haskell.vivian.mcphail <at> gmail <dot> com
 Stability:           experimental
